# risc-v_cpu

./: .gitmodules  CMakeLists.txt  README.md
src/pipeline/: adder.v  alu.v  alu_consts.v  aludec.v  consts.v  controller.v  datapath.v  dmem.v  elfloader.hh  flopr.v  hazard.v  imm_sel.v  main.cc  maindec.v  mux2.v  mux3.v  mux4.v  pc_reg.v  pipereg.v  regfile.v  riscv.v  set_forward.v  signext.v  sl2.v  top.v  tracer.hh
src/single/: ALU.v  CMakeLists.txt  adder.v  alu.v  aludec.v  consts.v  controller.v  datapath.v  dmem.v  elfloader.hh  flopr.v  imem.v  imm_sel.v  main.cc  main.cpp  maindec.v  mips.v  mux2.v  mux3.v  opcodes.v  regfile.v  riscv.v  signext.v  top.v  tracer.hh
test/: add.c
